# 11labs-hackathon-voxplorer

./: LICENSE.md  README.md
voxplorer-backedn/: .gitignore  pyproject.toml
voxplorer-backend/: .gitignore  pyproject.toml
voxplorer-backend/tests/: test_conversation_history.py  test_websocket.py
voxplorer-backend/transcripts/: CA68563d4ac14d0e275dc09ada98970bed_20250223_004027.json  CAFV95HB0I102G9UyRFwvh_20250223_100548.json
voxplorer-backend/voxplorer_backend/: main.py
voxplorer-backend/voxplorer_backend/agent/: ImageSummaryService.py  planner.py  route_planner.py
voxplorer-backend/voxplorer_backend/models/: requests.py
voxplorer-backend/voxplorer_backend/services/: elevenlabs_service.py  google_service.py  make_service.py  test_agent.py  test_elevenlabs.py  test_websocket.py  twilio_audio_interface.py  twilio_service.py
voxplorer-ui/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts
voxplorer-ui/src/: App.tsx  index.css
voxplorer-ui/src/components/: BookingSummary.tsx  DemoScreen.tsx  FeatureCards.tsx  InputBar.tsx  Navigation.tsx  TravelPlan.tsx
voxplorer-ui/src/config/: api.ts
voxplorer-ui/src/constants/: images.ts
voxplorer-ui/src/pages/: Demo1.tsx  Demo2.tsx  Demo3.tsx  Demo4.tsx  Index.tsx  ItineraryDetail.tsx  ManagePage.tsx  Narrate.tsx  NarrateRebook.tsx  NewBooking.tsx  PreLanding.tsx  ScheduleDetail.tsx  SiteDetail.tsx  Welcome.tsx
