[tool.poetry]
name = "voxplorer-backedn"
version = "0.1.0"
description = ""
authors = ["zhujinglei <zhujinglei2020@outlook.com>"]
readme = "README.md"
packages = [{include = "voxplorer_backedn"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
