[tool.poetry]
name = "voxplorer-backend"
version = "0.1.0"
description = ""
authors = ["zhujinglei <zhujinglei2020@outlook.com>"]
readme = "README.md"
packages = [{include = "voxplorer_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
httpx = "^0.24.0"
python-dotenv = "^0.21.1"
requests = "2.31.0"
dotenv = "^0.9.9"
googlemaps = "^4.10.0"
twilio = "^8.12.0"
websockets = "^12.0"
google-cloud-vision = "^3.10.0"
openai = "^1.63.2"
elevenlabs = "^1.51.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
